Add contributor callout
- add related styles
- fix README formatting
- update pet image links

--- a/src/_includes/base.njk
+++ b/src/_includes/base.njk
@@ -17,5 +17,11 @@
 	<main>
 	{{ content | safe }}
 	</main>
+	<footer>
+		<div class="container">
+			<h4>Add Your Pet!</h4>
+			<p>Learn how to contribute your pet by <a href="https://github.com/5t3ph/meow-vs-bowwow">visiting the repo ></a></p>
+		</div>
+	</footer>
 </body>
 </html>
