Add stacks data, pagination, and views

--- a/src/_includes/base.njk
+++ b/src/_includes/base.njk
@@ -1,27 +1,30 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-	<meta charset="UTF-8">
-	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<title>{{ title }}</title>
-	<link href="https://fonts.googleapis.com/css2?family=Rowdies:wght@300;700&display=swap" rel="stylesheet">
-	<link rel="stylesheet" href="/css/style.css" />
-</head>
-<body>
-	<header>
-		<h1>{{ title }}</h1>
-		{% if page.url !== '/' %}
-		<h2><a href="/">😺 Meow vs. BowWow 🐶</a></h2>
-		{% endif %}
-	</header>
-	<main>
-	{{ content | safe }}
-	</main>
-	<footer>
-		<div class="container">
-			<h4>Add Your Pet!</h4>
-			<p>Learn how to contribute your pet by <a href="https://github.com/5t3ph/meow-vs-bowwow">visiting the repo ></a></p>
-		</div>
-	</footer>
-</body>
+  <head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>{{ title }}</title>
+    <link href="https://fonts.googleapis.com/css2?family=Rowdies:wght@300;700&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="/css/style.css"/>
+  </head>
+  <body>
+    <header>
+      <h1>{{ title }}</h1>
+      {% if page.url !== '/' %}
+        <h2>
+          <a href="/">😺 Meow vs. BowWow 🐶</a>
+        </h2>
+      {% endif %}
+    </header>
+    <main>
+      {{ content | safe }}
+    </main>
+    <footer>
+      <div class="container">
+        <h4>Add Your Stack!</h4>
+        <p>Learn how to contribute your stack by <a href="https://github.com/5t3ph/meow-vs-bowwow">visiting the repo ></a>
+        </p>
+      </div>
+    </footer>
+  </body>
 </html>
