Remove unused files/data

--- a/src/_includes/base.njk
+++ b/src/_includes/base.njk
@@ -12,7 +12,7 @@
       <h1>{{ title }}</h1>
       {% if page.url !== '/' %}
         <h2>
-          <a href="/">😺 Meow vs. BowWow 🐶</a>
+          <a href="/">🌍🤖 Planet Stacks 🤖🌍</a>
         </h2>
       {% endif %}
     </header>
@@ -22,7 +22,7 @@
     <footer>
       <div class="container">
         <h4>Add Your Stack!</h4>
-        <p>Learn how to contribute your stack by <a href="https://github.com/5t3ph/meow-vs-bowwow">visiting the repo ></a>
+        <p>Learn how to contribute your stack by <a href="https://github.com/juancarlosasensio/planet-stack" target="_blank">visiting the repo ></a>
         </p>
       </div>
     </footer>
