--- a/src/index.njk
+++ b/src/index.njk
@@ -4,7 +4,7 @@ title: Planet Stacks
 ---
 
 <article class="battle">
-  <h2>⚡️ Weekly Highlights of how stuff is built and how it functions ⚡️</h2>
+  <h2>⚡️ Weekly Highlight ⚡️</h2>
   <div class="columns">
     <ul>
       {% for stack in stacks | randomStack %}
@@ -19,6 +19,14 @@ title: Planet Stacks
         </li>
       {% endfor %}
     </ul>
+  </div>
+  <div>
+    <p>
+      About the project
+    </p>
+    <p>
+      View all stacks!
+    </p>
   </div>
 </article>
 
