--- a/src/_includes/stack.njk
+++ b/src/_includes/stack.njk
@@ -28,6 +28,13 @@ layout: base.njk
   </ul>
 </ul>
 
+{% if pagination.href.previous %}
+<a href="{{pagination.href.previous}}">Previous</a>
+{% endif %}
+{% if pagination.href.next %}
+<a href="{{pagination.href.next}}">Next</a>
+{% endif %}
+
 {# {
   "title": "Tesla Test",
   "author": "Sir Elon",
