--- a/src/index.njk
+++ b/src/index.njk
@@ -7,7 +7,7 @@ title: Planet Stacks
   <h2>⚡️ Weekly Highlight ⚡️</h2>
   <div class="columns">
     <ul>
-      {% for stack in stacks | randomStack %}
+      {% for stack in stacks | randomItem %}
         <li>
           <h4>{{ stack.title }}</h4>
           <ul>
@@ -25,13 +25,13 @@ title: Planet Stacks
       <a href="/about">About the project</a>
     </p>
     <p>
-      {% for stack in stacks | randomStack %}
+      {% for stack in stacks | randomItem %}
         {% if loop.first %}
           {% set linkToStacks = stack.title %}
         {% endif %}
       {% endfor %}
       {# How do I link to stacks without necesarilly knowing what the final page path will be? #}
-      <a href="/stacks/desktop-computer-test">View all stacks!</a>
+      <a href="/stacks">View all stacks!</a>
     </p>
   </div>
 </article>
