--- a/src/about.njk
+++ b/src/about.njk
@@ -3,43 +3,15 @@ layout: base.njk
 title: About This Project
 ---
 
-<article class="battle">
-  <h2>Crowdsourced technology stacks</h2>
-  <div>
-    <p>
-      The goal is to allow subject-matter experts in their fields submit technology stacks for interesting projects.
-    </p>
-    <p>
-      From dams and drones to vaccum cleaners and apps on your phone, there are many technologies, unbeknownst to most of us, involved in making the planet tick.
-    </p>
-    <p>
-      This project was hugely inspired by Stephanie Eckles, and much of the groundwork for this project itself was laid out by her.
-    </p>
-  </div>
+<article class="flow">
+  <h3>Crowdsourced technology stacks</h3>
+  <p>
+        Subject-matter experts showing us the technologies behind curious projects.
+      </p>
+  <p>
+        From dams and drones to vaccum cleaners and apps on phones, there are many technologies –some of them unbeknownst to most of us– involved in making the planet tick.
+      </p>
+  <p>
+        This project was hugely inspired by Stephanie Eckles. Much of the groundwork for this project was laid out by her.
+      </p>
 </article>
-
-{# {
-  "title": "Tesla Stack Test",
-  "author": "Sir Elon",
-  "twitter": "toysoldier182",
-  "websiteTitle": "juancarlosasensio.com",
-  "websiteUrl": "https://juancarlosasensio.netlify.app/",
-  "stack": {
-    "interior": [
-      "Aluminum",
-      "Leather"
-    ],
-    "exterior": [
-      "Aluminum",
-      "Glass"
-    ],
-    "power": [
-      "Drive train",
-      "Tesla battery"
-    ],
-    "software": [
-      "JavaScript",
-      "C++"
-    ]
-  }
-} #}
