Update footer content

--- a/src/_includes/base.njk
+++ b/src/_includes/base.njk
@@ -11,7 +11,6 @@
   </head>
 
   <body class="page-container">
-    {# TODO: refactor this horrid inline style ↓↓↓... #}
     <div class="content-container">
       <stack-l space="var(--s3)">
         {# header... #}
@@ -25,7 +24,7 @@
             <h1>{{ title }}</h1>
           </stack-l>
         </header>
-        {# main. #}
+        {# main... #}
         <main>
           {{ content | safe }}
         </main>
