--- a/src/_includes/footer.njk
+++ b/src/_includes/footer.njk
@@ -1,10 +1,12 @@
 <footer>
   <box-l borderWidth="0px" padding="var(--s3)">
     <cluster-l justify="space-between" align="center">
-      <cluster-l justify="flex-start" space="var(--s1)" align="center">
-        <a href="/about">About the project</a>
-        <a href="/stacks">View all stacks</a>
-      </cluster-l>
+      <div class="text-align:left">
+        <h4>Planet Stacks</h4>
+        <p>
+          Created by <a href="https://twitter.com/toysoldier182" target="_blank">Juan Carlos Asensio</a>
+        </p>
+      </div>
       <div class="text-align:left">
         <h4>Add Your Stack!</h4>
         <p>
