Refactor stack layout (#8)
* Use stack partial in stacks pagination --WIP

* Break down base layout sections into partials. Refactor stack layout into partial

* Partialize header. Add boolean in frontMatter to render stack partial's title

--- a/src/_includes/_stack.njk
+++ b/src/_includes/_stack.njk
@@ -1,8 +1,7 @@
----
-layout: base.njk
----
-
 <stack-l space="var(--s3)">
+  {% if showStackPartialTitle %}
+    <h2 class="text-align:center" >{{ stack.title }}</h2>
+  {% endif %}
   <stack-l space="var(--s3)" class="connected">
     {% for key, value in stack %}
       {% if key === 'stack' or key === 'techStack' %}
@@ -19,16 +18,7 @@ layout: base.njk
       {% endif %}
     {% endfor %}
   </stack-l>
-  <div>
-    <cluster-l justify="space-between" align="center">
-      <div>
-        {% if pagination.href.previous %}
-          <a href="{{pagination.href.previous}}">Previous</a>
-        {% endif %}
-      </div>
-      {% if pagination.href.next %}
-        <a href="{{pagination.href.next}}">Next</a>
-      {% endif %}
-    </cluster-l>
-  </div>
+  {% block pagination_nav %}
+    {{pagination_nav | safe}}
+  {% endblock %}
 </stack-l>
